added new test section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
         </p>
       </article>
     </section>
+    <section class="section">
+      <article class="section__introduction">
+        <h2 class="section__header">Test section</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, maiores. Quisquam, voluptate quia repellat
+          impedit totam distinctio repudiandae. Repellat asperiores repudiandae omnis, vel saepe nisi natus? Debitis
+          quis eos reiciendis!
+        </p>
+      </article>
+    </section>
 
     <section class="section" id="instrukcja-pomiaru">
       <h3 class="section__header">
@@ -207,4 +216,4 @@
   </footer>
 </body>
 
-</html> 
+</html>
