added next text section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
           impedit totam distinctio repudiandae. Repellat asperiores repudiandae omnis, vel saepe nisi natus? Debitis
           quis eos reiciendis!
         </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus facere quia adipisci perspiciatis illo
+          natus ipsam maiores, placeat a explicabo suscipit nihil facilis totam alias, tempora consectetur porro non.
+          Ad!
+        </p>
       </article>
     </section>
 
