--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
           ostatecznie prowadzi do <strong>uszkodzenia akumulatora</strong>. <br>Jak sprawdzić pobór
           prądu z akumulatora w pojeźdie? Do wykonania tego pomiaru potrzebny jest
           miernik prądu stałego <i>(multimetr)</i> z zakresem pracy minimum do (10A) oraz
-          klucz do odkręcenia <i>klemy</i>. <br>
-          <strong class="section__strong js-section__strong ">
+          klucz do odkręcenia <i>klemy</i>.
+        </p>
+        <p> <strong class="section__strong js-section__strong ">
             UWAGA! Po podłączeniu miernika
             szeregowo do instalacji akumulatora, czyli do pomiaru poboru prądu, <br> <em>NIE URUCHAMIAMY SILNIKA!</em>
             Może dojść do spalenia przewodów pomiarowych i uszkodzenia
@@ -71,7 +72,7 @@
         </p>
       </article>
     </section>
-    
+
     <section class="section" id="instrukcja-pomiaru">
       <h3 class="section__header">
         Instrukcja wykonania pomiaru poboru prądu z akumulatora
