--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontrola rozładowania akumulatora</title>
-  <link rel="icon" href="images/RO.png">
+  <link rel="icon" href="images/RO2.png">
   <meta property="og:image" content="images/share.png">
   <script defer src="js/script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
